--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 BOT_TOKEN=8505472070:AAGOfd7mJnr9LhfhQBX3Zd3e6GB0fJxgCpM
 DM_USER_IDS=123456789,987654321
-BASE_URL=http://127.0.0.1:8000
-WEBAPP_URL=https://rare-shirts-obey.loca.lt/webapp
+BASE_URL=https://dnd-bot-backend.onrender.com
+WEBAPP_URL=https://dnd-bot-backend.onrender.com/webapp
