--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,30 +29,40 @@ jobs:
           debug: true
 
           script: |
-            set -e
+            set -euo pipefail
 
-            cd /opt/telegram-bot/DndSheet
+            APP_DIR="/opt/telegram-bot/DndSheet"
+            BACKEND_DIR="$APP_DIR/backend"
+            DB_PATH="$BACKEND_DIR/dnd_v2.sqlite3"
 
-            # --- SAFETY: backup sqlite if exists ---
-            DB="backend/dnd_v2.sqlite3"
-            if [ -f "$DB" ]; then
-              cp "$DB" /tmp/dnd_v2.sqlite3.backup
-            fi
+            echo "==> Go to app dir"
+            cd "$APP_DIR"
 
-            # --- UPDATE CODE WITHOUT MERGE CONFLICTS ---
+            echo "==> Update code"
             git fetch --all
             git reset --hard origin/master
             git clean -fd
 
-            # --- restore sqlite back (if it existed) ---
-            if [ -f /tmp/dnd_v2.sqlite3.backup ]; then
-              mkdir -p backend
-              cp /tmp/dnd_v2.sqlite3.backup "$DB"
-            fi
-
-            cd backend
+            echo "==> Activate venv & install deps"
+            cd "$BACKEND_DIR"
             source venv/bin/activate
             pip install -r requirements.txt
 
-            systemctl restart dnd-backend
-            systemctl restart dnd-bot
+            echo "==> Stop services before DB ops"
+            systemctl stop dnd-backend || true
+            systemctl stop dnd-bot || true
+
+            echo "==> Try migrations (alembic upgrade head)"
+            set +e
+            alembic upgrade head
+            MIG_STATUS=$?
+            set -e
+
+            if [ $MIG_STATUS -ne 0 ]; then
+              echo "!! Alembic failed. Rebuilding SQLite to keep deploy green."
+
+              TS="$(date +%Y%m%d_%H%M%S)"
+              if [ -f "$DB_PATH" ]; then
+                mkdir -p "$BACKEND_DIR/db_backups"
+                mv "$DB_PATH" "$BACKEND_DIR/db_backups/dnd_v2.sqlite3.$TS.bak"
+                echo "Moved old DB to db_backups/dnd_v2.sqlite3.$TS.bak"
