--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,44 +25,55 @@ jobs:
           port: 22
           key: ${{ secrets.SSH_KEY }}
 
-          script_stop: true
+          # ВАЖНО: не даём action обрывать скрипт на первой ошибке
+          script_stop: false
           debug: true
 
           script: |
-            set -euo pipefail
+            set -eu
 
             APP_DIR="/opt/telegram-bot/DndSheet"
             BACKEND_DIR="$APP_DIR/backend"
             DB_PATH="$BACKEND_DIR/dnd_v2.sqlite3"
-
-            echo "==> Go to app dir"
-            cd "$APP_DIR"
+            BACKUP_DIR="$BACKEND_DIR/db_backups"
 
             echo "==> Update code"
+            cd "$APP_DIR"
             git fetch --all
             git reset --hard origin/master
             git clean -fd
 
-            echo "==> Activate venv & install deps"
-            cd "$BACKEND_DIR"
-            source venv/bin/activate
-            pip install -r requirements.txt
-
-            echo "==> Stop services before DB ops"
+            echo "==> Stop services"
             systemctl stop dnd-backend || true
             systemctl stop dnd-bot || true
 
-            echo "==> Try migrations (alembic upgrade head)"
-            set +e
-            alembic upgrade head
-            MIG_STATUS=$?
-            set -e
+            echo "==> Install deps"
+            cd "$BACKEND_DIR"
+            . venv/bin/activate
+            pip install -r requirements.txt
 
-            if [ $MIG_STATUS -ne 0 ]; then
-              echo "!! Alembic failed. Rebuilding SQLite to keep deploy green."
-
+            echo "==> Migrate"
+            if alembic upgrade head; then
+              echo "✅ Alembic OK"
+            else
+              echo "⚠️ Alembic failed, rebuilding SQLite to keep deploy green"
               TS="$(date +%Y%m%d_%H%M%S)"
+              mkdir -p "$BACKUP_DIR"
               if [ -f "$DB_PATH" ]; then
-                mkdir -p "$BACKEND_DIR/db_backups"
-                mv "$DB_PATH" "$BACKEND_DIR/db_backups/dnd_v2.sqlite3.$TS.bak"
-                echo "Moved old DB to db_backups/dnd_v2.sqlite3.$TS.bak"
+                mv "$DB_PATH" "$BACKUP_DIR/dnd_v2.sqlite3.$TS.bak"
+                echo "Moved old DB to $BACKUP_DIR/dnd_v2.sqlite3.$TS.bak"
+              fi
+
+              # Повторяем на чистой БД
+              alembic upgrade head
+              echo "✅ Alembic OK after rebuild"
+            fi
+
+            echo "==> Start services"
+            systemctl start dnd-backend
+            systemctl start dnd-bot
+
+            echo "==> Healthcheck"
+            sleep 2
+            curl -fsS http://127.0.0.1:8000/health >/dev/null ||
+
